--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -4,6 +4,10 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    .logo{
+        width: 300px;
+        padding-top: 5%;
+    }
     .footer-text {
         color: #fff;
         font-family: bluetext, sans-serief;
