--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -1,5 +1,12 @@
+.hero-bg{
+    background-image: url(../images/hero-section.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .main-heading-section {
-    margin: 30px;
+    padding: 30px;
     .heading-mail {
         .emailus {
             color: $primary-color;
@@ -60,7 +67,7 @@
     box-shadow: 0px 0px 18px #0000006b;
     font-family: 'Poppins', sans-serif;
     display: grid;
-    grid-template-columns: 2fr 5fr;
+    grid-template-columns: 1fr 5fr;
     align-items: center;
 
     .menu-container {
@@ -119,7 +126,8 @@ label.logo {
     // background-size: cover;
     // background-repeat: no-repeat;
     // background-position:bottom right ;
-   
+    padding: 0% 0% 23% 0%;
+
     .hero-heading{
         text-transform: uppercase;
         font-weight: bold;
@@ -243,7 +251,11 @@ label.logo {
 //past performance
 .past-perform{
     margin-top: 100px;
-    background-image: url('../images/bg777.jpg');
+    background-image: url('../images/bg666.jpg'), url('../images/round-green.jpg'), url('../images/round-g-right.jpg');
+    background-repeat: no-repeat,no-repeat,no-repeat;
+    background-size: 150px,150px,150px;
+    background-position: bottom left,top right,bottom right;
+
     .container-heading{
         text-transform: uppercase;
         font-weight: bold;
