--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -376,51 +376,88 @@ label.logo {
 // end product section
 
 //Testimonals section
-.Testimonals-section{
+.testimonials-section {
+    padding-top: 150px;
+    padding-bottom: 100px;
     background-image: url(../images/bg666.jpg);
     background-size: 200px;
     background-repeat:no-repeat ;
     background-position-y: top;
-    .comma{
-        transform: translateY(30px);
-        width: 100px;
-        z-index: 2;
-        margin-left: 8%;
-        top: 40%;
-        position: relative;
-    }
+
     .image-box{
-        display: flex;
         img{
-            margin-top: 180px;
-            width: 90%;
+            width: 100%;
         }
     }
-    .Testimonals{
-        border: solid #a8a7a7;
-        border-width: 1px;
-        padding: 20px;
-        width: 95%;
+
+    .testimonial-main {
+        position: relative;
+        width: 100%;
         background-color: $primary-color;
-        margin-top: 200px;
-        
-        .Testimonals-menu-heading{
+        padding: 20px;
+
+        .testimonial-heading {
             text-transform: uppercase;
             text-align: center;
             font-weight: bold;
             font-family: 'Poppins', sans-serif;
             color: #fff;
-           
         }
-        .Testimonals-text{
+
+        .comma {
+            width: 100px;
+            position: absolute;
+            top: -40px;
+            left: 20px;
+        }
+
+        .testimonials {
+            .testimonial {
+                .text {
+                    color: #fff;
+                    text-transform: uppercase;
+                    padding: 20px 30px;
+                    margin-bottom: 0;
+                    font-size: 0.9em;
+                    font-family: 'Poppins', sans-serif;
+                }
+            }
+        }
+    }
+
+    .testimonial-nav {
+        margin-top: 30px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+
+        button {
+            border: none;
+            box-shadow: none;
             color: #fff;
-            text-transform: uppercase;
-            padding-top: 10px;
-            padding-bottom: 10px;
-            padding-left: 30px;
-            padding-right: 30px;
-            font-size: 0.9em;
-            font-family: 'Poppins', sans-serif;
+            background-color: $primary-color;
+            width: 50px;
+            height: 50px;
+            padding: 10px;
+            border-radius: 50%;
+            position: relative;
+            transition: background-color 0.3s ease-in-out;
+
+            i {
+                text-align: center;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+            }
+
+            &.next {
+                margin-right: 15px;
+            }
+
+            &:hover {
+                background-color: darken($primary-color, 10);
+            }
         }
     }
 }
