--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -155,6 +155,10 @@ label.logo {
     .heading-hero{
         display: flex;
         justify-content: center;
+
+        @media(min-width:768px){ 
+           justify-content: flex-start;
+       }
         .first-btn{
             padding: 10px 20px;
             background-color: $primary-color;
