--- a/src/scss/_single_blog.scss
+++ b/src/scss/_single_blog.scss
@@ -27,4 +27,12 @@
             font-weight: 700;
         }
     }
+
+}
+.date-sec{
+    text-align: center;
+    font-weight: bold;
+    padding-top: 50px;
+    color: #000;
+    font-size: 2em;
 }
