--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -301,6 +301,7 @@ body {
         border-width: 1px;
         padding: 20px;
         transition: all ease-in-out 0.3s;
+        height: 100%;
         .vantage-img {
             width: 25%;
             display: flex;
@@ -386,8 +387,6 @@ body {
         }
     }
     .container-heading-text {
-
-        text-transform: uppercase;
         padding-top: 30px;
         padding-bottom: 30px;
         text-align: center; 
@@ -508,7 +507,7 @@ body {
         }
         .product-text {
             color: #000;
-            text-transform: uppercase;
+            // text-transform: uppercase;
             padding-top: 10px;
             padding-bottom: 10px;
             padding-left: 30px;
@@ -701,6 +700,11 @@ body {
             transition: all ease-in-out 0.3s;
 
             .card-body {
+                // .date-text{
+                //     text-align: center;
+                //     font-weight: bold;
+                //     padding-top: 50px;
+                // }
                 .card-title {
                     text-align: center;
                     font-weight: bold;
