--- a/src/scss/_blog.scss
+++ b/src/scss/_blog.scss
@@ -13,43 +13,7 @@
         font-family: $primary-font;
 
         .post-main {
-            height: 100%;
-            border: 1px solid #9b9b9b;
-
-            .img-container {
-                width: 100%;
-
-                img {
-                    width: 100%;
-                }
-            }
-
-            .content {
-                margin-top: 10px;
-                padding: 20px 15px;
-                word-break: break-all;
-
-                .post-title {
-                    font-weight: 700;
-                }
-
-                .post-text {
-                    color: #898989;
-                }
-
-                .post-link {
-                    padding: 10px 20px;
-                    background-color: $primary-color;
-                    border-radius: 10px;
-                    color: #fff;
-
-                    &:hover {
-                        background-color: #fff;
-                        color: #000;
-                        border-color: #555555;
-                    }
-                }
-            }
+            @include post-box;
         }
     }
 }
